testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/try.adl
CONTEXT Try
INCLUDE "try.xlsx"

RELATION r[Person*A]
CLASSIFY Student ISA Person

POPULATION r[Person*A] CONTAINS
  [ ("Alice", "20")
  , ("Bob", "22")
  , ("Charlie", "21")
  ]

ENDCONTEXT